infra/k8s/kafka.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
    name: kafka-depl
    labels:
        app: kafka
spec:
    replicas: 1
    selector:
        matchLabels:
            app: kafka
    template:
        metadata:
            labels:
                app: kafka
        spec:
            containers:
                - name: broker
                  image: confluentinc/cp-kafka:latest
                  ports:
                      - containerPort: 9092
---
apiVersion: v1
kind: Service
metadata:
    name: kafka-srv
spec:
    selector:
        app: kafka
    ports:
        - protocol: TCP
          port: 9092
          targetPort: 9092
