infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-srv
    annotations:
spec:
    ingressClassName: nginx
    rules:
        - host: ticketing.dev
          http:
              paths:
                  - path: /api/users
                    pathType: Prefix
                    backend:
                        service:
                            name: auth-srv
                            port:
                                number: 3000
